@@ -1,3 +1,8 @@
+  22 Aug 2016; Manuel Friedli <manuel@fritteli.ch>
+  -gitlab-ci-multi-runner-1.3.2.ebuild:
+  dev-vcs/gitlab-ci-multi-runner:  purged all ebuild versions <gitlab-ci-multi-
+  runner-1.4.1
+
 *gitlab-ci-multi-runner-1.5.0 (22 Aug 2016)
 
   22 Aug 2016; Manuel Friedli <manuel@fritteli.ch>
